--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "first-pavilion-website",
   "main": "app.js",
   "scripts": {
-    "start": "nodemon app.js"
+    "start": ""
   },
   "author": "firstpavilion",
   "license": "ISC",
